--- a/src/app/event/event-list/event-list.component.html
+++ b/src/app/event/event-list/event-list.component.html
@@ -1,17 +1,26 @@
-<div class="row g-0 overflow-auto">
-  <div *ngFor="let item of pageOfItems" class="col-sm-3">
-    <div class="card">
-      <img class="card-img-top" src="https://aws-cf.imdoc.fr/prod/photos/3/3/2/4472332/19193316/img-191933160c3.jpg?v=11" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title {{item.id}}</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+<div *ngIf="!errorNotFound; then dataFound else dataNotFound"></div>
+<ng-template #dataFound>
+  <div class="row g-0 overflow-auto">
+    <div *ngFor="let item of recEvents" class="col-sm-3" style="padding:10px;">
+      <div class="card">
+        <img class="card-img-top" src="https://aws-cf.imdoc.fr/prod/photos/3/3/2/4472332/19193316/img-191933160c3.jpg?v=11" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{item.eventName}}</h5>
+          <p class="card-text">{{item.eventDescription}}</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
       </div>
     </div>
   </div>
+  <div class="pb-0 pt-3">
+    <jw-pagination style="display:block; margin:auto; width:50%;" [items]="recEvents" [pageSize]="pageSize" (changePage)="onChangePage($event)"></jw-pagination>
+  </div>
+</ng-template>
+<ng-template #dataNotFound>
+<div>
+  <h1>Erreur 404</h1>
+  Il semble qu'aucun événement ne correspond à votre recherche
 </div>
-<div class="card-footer pb-0 pt-3">
-  <jw-pagination [items]="items" [pageSize]="pageSize" (changePage)="onChangePage($event)"></jw-pagination>
-</div>
+</ng-template>
