--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,12 @@
-      <app-menu-top></app-menu-top>
-  <div class="row g-0">
-    <div class="col-2" style="padding: 0;">
-      <app-menu-left></app-menu-left>
-      <!-- Left bar -->
-    </div>
-    <div class="col-10 overflow-auto" style="padding: 0; height:100vh">
-      <!-- Top navbar -->
-      <h1>Hi {{currentUser.email}}!</h1>
-      <p>Welcome to home page!!</p>
-      <app-event-list></app-event-list>
-    </div>
+<!-- Top navbar -->
+<app-menu-top></app-menu-top>
+<div class="row g-0">
+  <div class="col-2" style="padding: 0;">
+    <!-- Left bar -->
+    <app-menu-left (sortEvent)="receiveSortingParameter($event)" ></app-menu-left>
   </div>
+  <div class="col-10 overflow-auto" style="padding: 0; height:100vh; background-color:#eaeaea;">
+    <app-event-list [sortParam]="sortParam" ></app-event-list>
+  </div>
+</div>
 
