--- a/src/app/menu/menu-left/menu-left.component.css
+++ b/src/app/menu/menu-left/menu-left.component.css
@@ -34,13 +34,6 @@ body {
   background: #fafafa;
 }
 
-p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-  line-height: 1.7em;
-  color: #999;
-}
 
 a, a:hover, a:focus {
   color: inherit;
@@ -50,33 +43,30 @@ a, a:hover, a:focus {
 
 #sidebar {
   /* don't forget to add all the previously mentioned styles here too */
-  background: #7386D5;
-  color: #fff;
+  background: white; /*background principal*/
+  color: black;
   transition: all 0.3s;
 }
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #6d7fcc;
+  background: white; /*background principal en-tête*/
 }
 
 #sidebar ul.components {
-  padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+  /*padding: 20px 0;
+  border-bottom: 1px dashed white;*/
 }
 
 #sidebar ul p {
-  color: #fff;
   padding: 10px;
 }
 
 #sidebar ul li a {
-  padding: 10px;
-  font-size: 1.1em;
-  display: block;
+    display: block;
 }
 #sidebar ul li a:hover {
-  color: #7386D5;
+  color: #2e86de;
   background: #fff;
 }
 
@@ -87,5 +77,29 @@ a, a:hover, a:focus {
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #6d7fcc;
+  background: #48dbfb;
+}
+
+.a-gl{
+  cursor:pointer;
+  padding: 5px;
+  padding-left: 20px;
+  font-size: 1em;
+
+}
+
+.ul-gl{
+  padding: 0px 0px 0px 0px;
+}
+
+.p-subtitle-gl{
+  margin-bottom: 0px;
+  font-size: 17px;
+  color: #404040;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.div-li-gl{
+  border-top: 1px dashed #d3d3d3;
 }
