--- a/src/app/menu/menu-top/menu-top.component.html
+++ b/src/app/menu/menu-top/menu-top.component.html
@@ -1,28 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-navbar-gl">
   <a class="navbar-brand" href="#">GlobalLive</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav" style="align-items: center;">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><i class="bi bi-house"></i> Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Mes événements</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <button type="button" class="btn btn-sm" (click)="addAnEvent()"><i class="bi bi-plus-square"></i> Ajouter un événement</button>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item" style="position:absolute; right:0px">
-        <a *ngIf="currentUser" class="nav-item nav-link" style="cursor:pointer"(click)="logout()">
-          <i class="bi bi-door-open"></i>          Logout</a>
+      <li class="nav-item dropdown" style="position:absolute; right:0px">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTboP3I7YVTIvLusl6s0sph0CDmXVW6wY4u8atSX4D2OKCfh7auYYZi0zuJpPmd8VmmA38&usqp=CAU" width="40" height="40" class="rounded-circle">
+        </a>
+        <div class="dropdown-menu" style="right: 0; left: auto;" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Dashboard</a>
+          <a class="dropdown-item" href="#">Edit Profile</a>
+          <a *ngIf="currentUser" class="dropdown-item" style="cursor:pointer"(click)="logout()">
+            <i class="bi bi-door-open"></i>          Logout</a>        </div>
       </li>
     </ul>
   </div>
 </nav>
 
 
+
+
+<script>
+  $('.dropdown-toggle').dropdown()
+</script>
