--- a/src/app/Components/user/Pages/edit-user-profile/edit-user-profile.component.html
+++ b/src/app/Components/user/Pages/edit-user-profile/edit-user-profile.component.html
@@ -5,7 +5,8 @@
     <!-- Left bar -->
     <app-menu-left *ngIf="!this.mobile"></app-menu-left>
   </div>
-  <div class="col-md-10 col-sm-12 div-col-10-gl">
+  <div style="position:relative;" class="col-md-10 col-sm-12 div-col-10-gl-2">
     <app-profile-form></app-profile-form>
+    <app-footer></app-footer>
   </div>
 </div>
