--- a/src/app/Components/event/Composants/event-not-found/event-not-found.component.html
+++ b/src/app/Components/event/Composants/event-not-found/event-not-found.component.html
@@ -3,8 +3,8 @@
     <h2 class="header" data-text="404">
       404
     </h2>
-    <h4 data-text="Opps! Evenement introuvable">
-      Opps! Evenement introuvable
+    <h4 data-text="">
+      Opps! {{eventNotFound}}
     </h4>
     <p>
       Désolé, aucun événément ne correspond à votre recherche. Peut-être devriez vous revenir plus tard.
