--- a/src/app/Components/user/Pages/login/login.component.html
+++ b/src/app/Components/user/Pages/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="login-form">
     <form style="padding-bottom:0px;" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
       <div class="avatar">
-        <img src="../../assets/img/user.svg" alt="Avatar">
+        <img src="../../assets/img/icons/user/Connexion/user.svg" alt="Avatar">
         <!--<i class="bi bi-person"></i>-->
       </div>
       <h2 id="login-title" class="text-center">Connexion</h2>
