--- a/src/app/Components/event/Composants/event-not-found/event-not-found.component.css
+++ b/src/app/Components/event/Composants/event-not-found/event-not-found.component.css
@@ -33,21 +33,7 @@ body{
   line-height: 1em;
   position: relative;
 }
-.content h2.header:after{
-  position: absolute;
-  content: attr(data-text);
-  top: 0;
-  left: 0;
-  right: 0;
-  /*background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
-  */
-  background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #2e86de, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
-  background-size: 400%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 1px 1px 2px rgba(255,255,255,0.25);
-  animation: animate 10s ease-in-out infinite;
-}
+
 @keyframes animate {
   0%{
     background-position: 0 0;
@@ -107,4 +93,39 @@ body{
 .content .btns a:hover{
   background: #2e86de;
   color: #fff;
+}
+
+@media screen and (max-width: 1700px) {
+  .content h2.header:after{
+    position: absolute;
+    content: attr(data-text);
+    top: 0;
+    left: 0;
+    right: 0;
+    /*background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+    */
+    background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #2e86de, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+    background-size: 400%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 1px 1px 2px rgba(255,255,255,0.25);
+    animation: animate 10s ease-in-out infinite;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .content h2.header:after{
+    position: absolute;
+    content: attr(data-text);
+    top: 0;
+    left: 0;
+    right: 0;
+    /*background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
+    */
+    background-size: 400%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 1px 1px 2px rgba(255,255,255,0.25);
+    animation: animate 10s ease-in-out infinite;
+  }
 }
