--- a/src/app/Components/event/Composants/event-view/event-view.component.html
+++ b/src/app/Components/event/Composants/event-view/event-view.component.html
@@ -14,7 +14,7 @@
           <label>Lien du live :</label>
           <div class="txt-value-gl"><a target="_blank"  href="http://{{this.eventOpen.eventLink}}">{{this.eventOpen.eventLink}}</a></div>
         </div>
-        <div class="col-md-2 col-sm-12 float-child div-value-gl">
+        <div [ngClass]="{'float-child' : !this.mobile}" class="col-md-2 col-sm-12 float-child div-value-gl">
           <label>Partager sur les réseaux sociaux :</label>
           <div class="txt-value-gl">
             <share-buttons
@@ -29,6 +29,10 @@
         <div class="col-md-6 col-sm-12 div-value-gl">
           <label>Date de l'événement :</label>
           <div class="txt-value-gl">{{this.eventOpen.eventDate | date:"dd-MM-yyyy"}}</div>
+        </div>
+        <div class="col-md-6 col-sm-12 div-value-gl">
+          <label>Heure de l'événement :</label>
+          <div class="txt-value-gl">{{this.eventHour}}</div>
         </div>
         <div [ngClass]="{'float-child' : !this.mobile}" class="col-md-6 col-sm-12 div-value-gl">
           <label>Lieu de l'événement :</label>
